<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_mine_nickname"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/mine_click_bg"
            android:clickable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_mine_head_portrait"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="false"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_mine_nickname"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:paddingLeft="4dp"
                android:paddingTop="12dp"
                android:text="@string/user_nickname"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_mine_my_collection"
            style="@style/style_mine_table"
            android:drawableLeft="@mipmap/tab_better_pressed"
            android:text="@string/mine_collection" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/tv_mine_food_album"
            style="@style/style_mine_table"
            android:drawableLeft="@mipmap/tab_channel_pressed"
            android:text="@string/food_album" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/tv_mine_my_date"
            style="@style/style_mine_table"
            android:drawableLeft="@mipmap/tab_message_pressed"
            android:text="@string/mine_date" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/tv_mine_record"
            style="@style/style_mine_table"
            android:drawableLeft="@mipmap/tab_my_pressed"
            android:text="@string/mine_record" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/tv_mine_setting"
            style="@style/style_mine_table"
            android:drawableLeft="@mipmap/tab_better_pressed"
            android:text="@string/setting" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_mine_exit_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:background="#FF0000"
        android:text="@string/exit_login"
        android:textColor="#FCFCFC"
        android:textSize="16sp" />
</RelativeLayout>